# ChemMCP

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
chem_mcp_toolkit/: __main__.py  general_search.py  main.py  mcp_app.py  molecule_description.py  molecule_info.py  molecule_ops.py  name_conversion.py  pubchem_search.py  pyproject.toml  rxn4chem.py
chem_mcp_toolkit/property_prediction/: __init__.py  property_prediction.py
chem_mcp_toolkit/utils/: base_tool.py  errors.py  llm.py  pubchem.py
chemmcp/: __init__.py  __main__.py  general_search.py  mcp_app.py  molecule_description.py  molecule_info.py  molecule_ops.py  name_conversion.py  pubchem_search.py  rxn4chem.py
chemmcp/property_prediction/: __main__.py  property_prediction.py  utils.py
chemmcp/tool_utils/: names.py  rxn4chem.py
chemmcp/tools/: bbbp_predictor.py  forward_synthesis.py  functional_group.py  functional_groups.py  hiv_inhibitor_predictor.py  iupac2smiles.py  logd_predictor.py  molecule_atom_count.py  molecule_captioner.py  molecule_generator.py  molecule_price.py  molecule_similarity.py  molecule_weight.py  name2smiles.py  name_conversion.py  patent_check.py  pubchem_search.py  pubchem_search_qa.py  retrosynthesis.py  rxn4chem.py  (+9 more)
chemmtk/: __init__.py  __main__.py  general_search.py  molecule_description.py  molecule_info.py  molecule_ops.py  name_conversion.py  pubchem_search.py  rxn4chem.py
data/: chem_wep_smi_canonicalized.csv
scripts/: generate_tool_envs.py  generate_tools_doc.py  generate_tools_env_json.py  tool_doc_template.md
(+106 files in other folders)
